--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,8 @@
             android:exported="false"/>
         <receiver android:name=".AppClosedReceiver"
             android:exported="false"/>
+        <receiver android:name=".StopServiceReceiver"
+            android:exported="false"/>
     </application>
 
 </manifest>
