--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,17 +30,28 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.UITNotify"
         tools:targetApi="31">
+
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.SettingsActivity"
+            android:exported="false"
+            android:label="Settings"
+            android:parentActivityName=".activities.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activities.MainActivity"/>
+        </activity>
+
+        <activity
+            android:name=".activities.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.UITNotify">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <service
             android:name=".ArticleForegroundService"
             android:foregroundServiceType="dataSync"
